src/test/ui/nll/user-annotations/adt-brace-enums.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:25:48
   |
LL |     SomeEnum::SomeVariant::<&'static u32> { t: &c };
   |                                                ^^
   |                                                |
   |                                                borrowed value does not live long enough
   |                                                this usage requires that `c` is borrowed for `'static`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:30:43
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
LL |     let c = 66;
LL |     SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                           ^^
   |                                           |
   |                                           borrowed value does not live long enough
   |                                           this usage requires that `c` is borrowed for `'a`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:40:47
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
...
LL |         SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                               ^^
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               this usage requires that `c` is borrowed for `'a`
LL |     };
   |     - `c` dropped here while still borrowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
